mini challenge 3 - add test for the custom hooks

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,12 @@
     <div id="root"></div>
     <script>
       if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
+      window.YTConfig = {
+        host: 'https://www.youtube.com',
+      };
     </script>
 
-    <!--
+    <!--π
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
